--- a/theme.toml
+++ b/theme.toml
@@ -1,12 +1,12 @@
-name = "Nightfall"
+name = "lexi-nightfall"
 license = "MIT"
-licenselink = "https://github.com/LordMathis/hugo-theme-nightfall//blob/master/LICENSE"
-description = "Minimal dark theme for Hugo"
-homepage = "https://github.com/LordMathis/hugo-theme-nightfall/"
+licenselink = "https://github.com/alexiarstein/lexi-nightfall//blob/master/LICENSE"
+description = "Minimal dark theme for Hugo, fork from Nightfall Theme"
+homepage = "https://github.com/alexiarstein/lexi-nightfall/"
 tags = ["minimal", "dark", "blog", "sass", "multilingual"]
 features = ["blog", "sass", "dark", "multilingual"]
 min_version = "0.80.0"
 
 [author]
-name = "Matúš Námešný"
-homepage = "https://namesny.com"
+name = "Alexia Steinberg"
+homepage = "https://lachicadesistemas.com.ar"
